<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.100xsystems</groupId>
    <artifactId>test-suite-java</artifactId>
    <version>0.1.0</version>
    <packaging>jar</packaging>

    <name>@100xsystems/test-suite-java</name>
    <description>
        Shared test helpers for 100xSystems Java curriculum.
        Provides JUnit 5 base classes, file assertions, and build verification utilities.
        Eliminates boilerplate duplication across lesson test files.
    </description>
    <url>https://github.com/100xsystems/test-suite-java</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>100xSystems</name>
            <organization>100xSystems</organization>
            <organizationUrl>https://100xsystems.dev</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/100xsystems/test-suite-java.git</connection>
        <developerConnection>scm:git:ssh://github.com:100xsystems/test-suite-java.git</developerConnection>
        <url>https://github.com/100xsystems/test-suite-java</url>
    </scm>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.11.0</junit.version>
    </properties>

    <dependencies>
        <!-- JUnit 5 API — consumers need this for @Test, assertions, etc. -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- JUnit 5 Engine — needed to run tests -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- JSON parsing for readJson helper -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- Publish to GitHub Packages -->
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub 100xSystems Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/100xsystems/test-suite-java</url>
        </repository>
    </distributionManagement>
</project>
